tests/interpreter/unary-expression-not-non-boolean.stderr
error: cannot apply unary operator '!' to type 'Number'
 --> $DIR/unary-expression-not-non-boolean.lox:1:1
  |
1 | !0;
  | ^^
